Updated lines information - sorting and coloring

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
           <label>הזן קישור ניהול ראשי (הוא לא ישמר בשום מקום):</label>
           <input type="text" id="link" required />
           <button type="submit">קבל מידע</button>
+          <button type="button" class="clear-cache" onclick="sessionStorage.clear();">ניקוי מטמון</button>
+          <a class="to-payers" href="./payers.html">לעדכון משלמשים אוטומטי</a>
           <section class="log">
             <div id="log"><br/></div>
           </section>
