Added progress to mark paid and don't require a file for payers process

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <section class="log">
             <div id="log"><br/></div>
           </section>
+          <div id="progress"><br/></div>
         </form>
       </main>
     </div>
