--- a/payers.html
+++ b/payers.html
@@ -14,7 +14,7 @@
             <h1>ניהול הסעות - עדכון משלמים</h1>
           </header>
           <label>קובץ תורמים:</label>
-          <input type="file" id="file" required />
+          <input type="file" id="file" />
           <br/>
           <label>קישור ניהול ראשי:</label>
           <input type="text" id="link" required />
@@ -22,6 +22,7 @@
           <section class="log">
             <div id="log"><br/></div>
           </section>
+          <div id="progress"><br/></div>
         </form>
       </main>
     </div>
