Added vcard generator

--- a/movilim/index.html
+++ b/movilim/index.html
@@ -62,6 +62,7 @@
         <br />
         <button type="submit">שלח</button><br/>
       </form>
+      <a class="to-vcard" href="./vcard.html">ליצירת קובץ אנשי קשר</a>
     </main>
   </div>
   <div id="print" style="display:none;">
