Implemented automatic wait list cleanup

--- a/movilim/index.html
+++ b/movilim/index.html
@@ -63,6 +63,7 @@
         <button type="submit">שלח</button><br/>
       </form>
       <a class="to-vcard" href="./vcard.html">ליצירת קובץ אנשי קשר</a>
+      <a class="to-index" href="./waitlist.html">להכנסת ממתינים</a>
     </main>
   </div>
   <div id="print" style="display:none;">
