--- a/movilim/vcard.html
+++ b/movilim/vcard.html
@@ -19,6 +19,7 @@
           <input type="lineNum" id="lineNum" required />
           <button type="submit">הורדה</button><br/>
           <a class="to-index" href="./index.html">לדפים להדפסה</a>
+          <a class="to-index" href="./waitlist.html">להכנסת ממתינים</a>
         </form>
       </main>
     </div>
