Added movilim/clearpaid.html and added support for running automatic update with 0 days

--- a/movilim/clearpaid.html
+++ b/movilim/clearpaid.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ניהול קו - הכנסת ממתינים</title>
+    <title>ניהול קו - ניקוי משלמים</title>
     <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
@@ -11,13 +11,11 @@
       <main>
         <form id="form" class="form">
           <header>
-            <h1>ניהול קו - הכנסת ממתינים</h1>
+            <h1>ניהול קו - ניקוי משלמים</h1>
           </header>
           <label>הזן קישור ניהול לקו:</label>
           <input type="text" id="link" required /><br>
-          <button type="submit">הכנסה אוטומטית של כל הממתינים</button><br/>
-          <a class="to-index" href="./index.html">לדפים להדפסה</a><br/>
-          <a class="to-index" href="./vcard.html">ליצירת קובץ אנשי קשר</a>
+          <button type="submit">ניקוי משלמים</button>
           <section class="log">
             <div id="log"><br/></div>
           </section>
@@ -34,29 +32,15 @@
         var origin = url.split("/").slice(0, 3).join("/");
         localStorage.setItem("link", url);
 
-        let totalMoved = 0;
+        let total = 0;
 
         function stopCallback(html) {
           var doc = parse(html);
           var passengers = doc.getElementsByTagName('tr');
           var runNext = function (i) {
             var row = passengers[i];
-            var iWaiting = row.innerHTML.indexOf('fa-pause-circle') > -1;
-
-            if (iWaiting) {
-              let el = findMatchByAction(row, 'td', 'openBusJoinerModal', '', true);
-              var token = el.getAttribute('onclick').split("'")[1];
-              totalMoved++;
-              return moveFromWaiting(origin, token).then(function () {
-                if (i + 1 < passengers.length) {
-                  return runNext(i + 1);
-                }
-                else {
-                  return Promise.resolve();
-                }
-              });
-            }
-            else {
+            let el = findMatchByAction(row, 'td', 'openBusJoinerModal', '', true);
+            if (!el) {
               if (i + 1 < passengers.length) {
                 return runNext(i + 1);
               }
@@ -64,6 +48,16 @@
                 return Promise.resolve();
               }
             }
+            var token = el.getAttribute('onclick').split("'")[1];
+            total++;
+            return clearPayment(origin, token).then(function () {
+              if (i + 1 < passengers.length) {
+                return runNext(i + 1);
+              }
+              else {
+                return Promise.resolve();
+              }
+            });
           }
           return runNext(0);
         }
@@ -96,7 +90,7 @@
                   }
                   else {
                     progress(stops.length, stops.length);
-                    log('Done. Moved ' + totalMoved + ' passengers from waiting.');
+                    log('Done. Cleared payment from ' + total + ' passengers.');
                     alert('Done');
                   }
                 });
