--- a/movilim/index.html
+++ b/movilim/index.html
@@ -62,7 +62,7 @@
         <br />
         <button type="submit">שלח</button><br/>
       </form>
-      <a class="to-vcard" href="./vcard.html">ליצירת קובץ אנשי קשר</a>
+      <a class="to-vcard" href="./vcard.html">ליצירת קובץ אנשי קשר</a><br/>
       <a class="to-index" href="./waitlist.html">להכנסת ממתינים</a>
     </main>
   </div>
