--- a/movilim/vcard.html
+++ b/movilim/vcard.html
@@ -18,7 +18,7 @@
           <label>שם או מספר קו שיופיע בתחילת שם האיש קשר:</label>
           <input type="lineNum" id="lineNum" required />
           <button type="submit">הורדה</button><br/>
-          <a class="to-index" href="./index.html">לדפים להדפסה</a>
+          <a class="to-index" href="./index.html">לדפים להדפסה</a><br/>
           <a class="to-index" href="./waitlist.html">להכנסת ממתינים</a>
         </form>
       </main>
